    "expr" and "lambda" message processing is now deferred, not deferlow-ed unless at object instantiation
    external editor, if set, opens instead of default Max editor

- all the bell-compliant objects except bach.eval:
    fixed very general issue preventing objects from working unless they had a bell lambda function

- bach.expr:
    evaluation precedence of the ** operator is now right-to-left, as per the documentation (2**3**2 now returns 512, previously 64)
    evaluation precedence of the ! and ~ operators is now higher than exponentiation
    unary minus after exponentiation operator now works

- bach.reg, bach.value, bach.pv
    Fixed memory leak related to the text editor window

- bach.roll, bach.score, bach.slot:
    Fixed bug causing resizing of objects when double clicking in a text slot
    The "addslot" message is now deprecated in favour of the identical "setslot" message. 
        The "addslot" message is still kept for backward compatibility, but you are encouraged to use "setslot" from now on.
    fixed potential memory leak when using transferslots
    Objects no longer notify "domain" and "paint" during image export
    Now "eraseslot" accepts "all" as argument to clear all slots
    Extended system for commands: now commands can be assigned to markers too, and can have a name and a start/end symbol

- bach.roll, bach.score: 
    New "setdl" message setting the duration line from a list of pitch breakpoints
    @playheadwidth attribute added, better doc for playcolor and added doc for playheadwidth
    now preschedule playing supports setclock
    removed unnecessary warnings for dynamics2velocities message
    dynamics can now be copy-pasteed
    new "reducefunction" message
    fixed bug potentially causing crashes with label families
    new message "setdurationline"; "addslot" is renamed "setslot" preserving the older for bwcompatibility
    @slopemapping attribute added: new support for Max-type slopes