@@ -27,52 +27,59 @@
 
 void post_top_supporters()
 {
-	post("- Alessandro Ratoci");
+	post("- 98123981293 1293812397123");
 	post("- Andres Ferrari");
-	post("- Benjamin Broening");
+	post("- Andrew Milne");
+	post("- Bob Falesch");
+	post("- Brooks");
 	post("- Carmine Emanuele Cella");
-	post("- Chris Poovey");
 	post("- Christopher Michael Trapani");
-	post("- Felipe Tovar-Henao");
+	post("- Dionysios");
+	post("- Douglas Geers");
+	post("- Fernando Villanueva");
 	post("- Francisco Colasanto");
-	post("- Gabriel José Bolaños");
+	post("- Gratkowski");
+	post("- Hannes Kerschbaumer");
 	post("- Hans Tutschku");
-	post("- Januibe");
 	post("- Jean-Baptiste Barrière");
-	post("- Jean-Julien Filatriau");
 	post("- Joost Van kerkhoven");
 	post("- Jose Miguel Fernandez");
 	post("- Julien Vincenot");
-	post("- Kenneth Stewart");
+	post("- Lotus Open Factory");
 	post("- Louis Goldford");
-	post("- Matthew Goodheart");
-	post("- Monica Lim");
+	post("- Luca Richelli");
+	post("- Martino Marini");
+	post("- Michael Monhart");
 	post("- Nikola Kołodziejczyk");
 	post("- Paul V. Miller");
 	post("- Pierre Alexandre Tremblay");
-	post("- Roméo Monteiro");
+	post("- Rubik Ernő Zoltán");
 	post("- Sean Ferguson");
 	post("- Seidenberg");
-	post("- Tomislav Oliver");
+	post("- Seth Shafer");
+	post("- Takuya Imahori");
 	post("- Vens R.");
 	post("- Viktor Velthuijs");
+	post("- Walt Don");
+	post("- Wolfgang Schnitzer");
 	post("- Yan Maresz");
 	post("- Yoshiaki Onishi");
 	post("- linazero");
-	post("- Øyvind Torvund");
+	post("- micron");
 }
 
 void post_all_patrons()
 {
-	post("98123981293 1293812397123, A M, Alessandro Ratoci, Alexis Baskind, Alvaro, Andres Ferrari, Andrew Milne, Ashlin Hunter, ");
-	post("Balint Bolcso, Benjamin Broening, Billy Newman, Bob Falesch, Brian Kirkbride, Brooks, Bruno Schaer, Carmine Emanuele Cella, ");
-	post("Chris Chandler, Chris Poovey, Christopher Lane, Christopher Michael Trapani, Dionysios, Douglas Geers, Felipe Tovar-Henao, ");
-	post("Fernando Villanueva, Florent Caron Darras, Francisco Colasanto, Gabriel José Bolaños, Gratkowski, Guido, Gustavo Chritaro, ");
-	post("Hannes Kerschbaumer, Hans Leeuw, Hans Tutschku, Jack Hamill, Januibe, Jean-Baptiste Barrière, Jean-Julien Filatriau, Jim Poole, ");
-	post("Joost Van kerkhoven, Jose Miguel Fernandez, Jose Veliz, José Martínez, João Pais, Julien Vincenot, Kenneth Stewart, ");
-	post("Lotus Open Factory, Louis Goldford, Luca Richelli, Lucie Jones, Lukas Esser, Manfred Schreier, Matthew Goodheart, ");
-	post("Michael Monhart, Michele, Monica Lim, Nikola Kołodziejczyk, Paul V. Miller, Pierre Alexandre Tremblay, Pierre Relaño, ");
-	post("Robert Appleton, Robert White, Roméo Monteiro, Rubens Askenar, Rubik Ernő Zoltán, Sam Long, Sean Ferguson, Sebastian Adams, ");
-	post("Seidenberg, Seth Shafer, Takuya Imahori, Tomislav Oliver, Vens R., Viktor Velthuijs, Vittorio Montalti, Walt Don, ");
-	post("Wolfgang Schnitzer, Yan Maresz, Yoshiaki Onishi, akio, audiophil, linazero, micron, Øyvind Torvund.");
+	post("98123981293 1293812397123, A M, Alessandro Ratoci, Alexis Baskind, Algo, Alvaro, Andres Ferrari, Andrew Milne, Ashlin Hunter, ");
+	post("Balint Bolcso, Beller, Benjamin Broening, Billy Newman, Bob Falesch, Brian Berry, Brian Kirkbride, Brooks, Bruno Schaer, ");
+	post("Carmine Emanuele Cella, Chris Chandler, Christopher Lane, Christopher Michael Trapani, Dionysios, Douglas Geers, ");
+	post("Felipe Tovar-Henao, Fernando Villanueva, Florent Caron Darras, Francisco Colasanto, Gabriel José Bolaños, Gratkowski, Guido, ");
+	post("Gustavo Chritaro, Hamish Robb, Hannes Kerschbaumer, Hans Leeuw, Hans Tutschku, Ivan Punal, Jack Hamill, James Bradbury, Januibe, ");
+	post("Jean-Baptiste Barrière, Jean-Julien Filatriau, Jim Poole, Joost Van kerkhoven, Jose Miguel Fernandez, Jose Veliz, ");
+	post("Joseph Leonard Heutmekers, José Martínez, João Pais, Juan Vassallo, Julian Stein, Julien Vincenot, Kenneth Stewart, ");
+	post("Lotus Open Factory, Louis Goldford, Luca Morino, Luca Richelli, Lucie Jones, Lukas Esser, Manfred Schreier, Marc Garcia Vitoria, ");
+	post("Martino Marini, Matias Brizuela, Matthew Goodheart, Michael Monhart, Michele, Nikola Kołodziejczyk, Paul V. Miller, ");
+	post("Pierre Alexandre Tremblay, Pierre Relaño, Robert Appleton, Robert White, Roméo Monteiro, Rubens Askenar, Rubik Ernő Zoltán, ");
+	post("Sam Long, Sean Ferguson, Sebastian Adams, Seidenberg, Seth Shafer, Takuya Imahori, Vens R., Viktor Velthuijs, Vinet, Walt Don, ");
+	post("Wolfgang Schnitzer, Yan Maresz, Yoshiaki Onishi, akio, audiophil, ignatius, linazero, micron, putney swope, Øyvind Torvund.");
 }
